--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
         "heroku-postbuild": "npm run build"
     },
     "devDependencies": {
+    },
+    "dependencies": {
+        "naive-ui": "^2.33.5",
+        "unplugin-vue-components": "^0.22.9",
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
@@ -20,10 +24,6 @@
         "tailwindcss": "^3.1.0",
         "vite": "^3.0.0",
         "vue": "^3.2.31"
-    },
-    "dependencies": {
-        "naive-ui": "^2.33.5",
-        "unplugin-vue-components": "^0.22.9"
     },
     "engines": {
         "node": "16.x"
