--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,68 @@
     "routes": [{
         "src": "/(.*)",
         "dest": "/api/index.php"
-    }]
+    }],
+    "env": {
+        "APP_NAME":"Laravel",
+        "APP_ENV":"local",
+        "APP_KEY":"base64:mMFBRKllR9Pj1DhBE81MYYsSytFFimjjPyB8Q2sN7ZU=",
+        "APP_DEBUG":true,
+        "APP_URL":"http://localhost",
+        "LOG_CHANNEL":"stack",
+        "LOG_DEPRECATIONS_CHANNEL":null,
+        "LOG_LEVEL":"debug",
+        "ASSET_URL":"http://localhost",
+
+        "DB_CONNECTION":"mysql",
+        "DB_HOST":"sql12.freemysqlhosting.net",
+        "DB_PORT":3306,
+        "DB_DATABASE":"sql12538613",
+        "DB_USERNAME":"sql12538613",
+        "DB_PASSWORD":"tXHUFSHzXS",
+
+        "BROADCAST_DRIVER":"log",
+        "CACHE_DRIVER":"file",
+        "FILESYSTEM_DISK":"local",
+        "QUEUE_CONNECTION":"sync",
+        "SESSION_DRIVER":"database",
+        "SESSION_LIFETIME":120,
+
+        "MEMCACHED_HOST":"127.0.0.1 ",
+
+        "REDIS_HOST":"127.0.0.1",
+        "REDIS_PASSWORD":null,
+        "REDIS_PORT":6379,
+
+        "MAIL_MAILER":"smtp",
+        "MAIL_HOST":"smtp-relay.sendinblue.com",
+        "MAIL_PORT":587,
+        "MAIL_USERNAME":"luzion1508@gmail.com",
+        "MAIL_PASSWORD":"zrVTsNh5PZLY86C1",
+        "MAIL_ENCRYPTION":null,
+        "MAIL_FROM_ADDRESS":"hello@example.com",
+        "MAIL_FROM_NAME":"${APP_NAME}",
+
+        "WEBHOST_SECRET":"dC*Dg!Wv7JYmI@#zYkhn",
+
+        "AWS_ACCESS_KEY_ID":"",
+        "AWS_SECRET_ACCESS_KEY":"",
+        "AWS_DEFAULT_REGION":"us-east-1",
+        "AWS_BUCKET":"",
+        "AWS_USE_PATH_STYLE_ENDPOINT":false,
+
+        "PUSHER_APP_ID":"",
+        "PUSHER_APP_KEY":"",
+        "PUSHER_APP_SECRET":"",
+        "PUSHER_HOST":"",
+        "PUSHER_PORT":443,
+        "PUSHER_SCHEME":"https",
+        "PUSHER_APP_CLUSTER":"mt1",
+
+        "VITE_PUSHER_APP_KEY":"${PUSHER_APP_KEY}",
+        "VITE_PUSHER_HOST":"${PUSHER_HOST}",
+        "VITE_PUSHER_PORT":"${PUSHER_PORT}",
+        "VITE_PUSHER_SCHEME":"${PUSHER_SCHEME}",
+        "VITE_PUSHER_APP_CLUSTER":"${PUSHER_APP_CLUSTER}"
+
+    }
 }
