--- a/vercel.json
+++ b/vercel.json
@@ -11,10 +11,10 @@
         "APP_NAME":"Laravel",
         "APP_ENV":"local",
         "APP_KEY":"base64:mMFBRKllR9Pj1DhBE81MYYsSytFFimjjPyB8Q2sN7ZU=",
-        "APP_DEBUG":true,
+        "APP_DEBUG":"true",
         "APP_URL":"http://localhost",
         "LOG_CHANNEL":"stack",
-        "LOG_DEPRECATIONS_CHANNEL":null,
+        "LOG_DEPRECATIONS_CHANNEL":"null",
         "LOG_LEVEL":"debug",
         "ASSET_URL":"http://localhost",
 
@@ -35,7 +35,7 @@
         "MEMCACHED_HOST":"127.0.0.1 ",
 
         "REDIS_HOST":"127.0.0.1",
-        "REDIS_PASSWORD":null,
+        "REDIS_PASSWORD":"null",
         "REDIS_PORT":6379,
 
         "MAIL_MAILER":"smtp",
@@ -43,7 +43,7 @@
         "MAIL_PORT":587,
         "MAIL_USERNAME":"luzion1508@gmail.com",
         "MAIL_PASSWORD":"zrVTsNh5PZLY86C1",
-        "MAIL_ENCRYPTION":null,
+        "MAIL_ENCRYPTION":"null",
         "MAIL_FROM_ADDRESS":"hello@example.com",
         "MAIL_FROM_NAME":"${APP_NAME}",
 
@@ -53,7 +53,7 @@
         "AWS_SECRET_ACCESS_KEY":"",
         "AWS_DEFAULT_REGION":"us-east-1",
         "AWS_BUCKET":"",
-        "AWS_USE_PATH_STYLE_ENDPOINT":false,
+        "AWS_USE_PATH_STYLE_ENDPOINT":"false",
 
         "PUSHER_APP_ID":"",
         "PUSHER_APP_KEY":"",
