--- a/vercel.json
+++ b/vercel.json
@@ -20,7 +20,7 @@
 
         "DB_CONNECTION":"mysql",
         "DB_HOST":"sql12.freemysqlhosting.net",
-        "DB_PORT":3306,
+        "DB_PORT":"3306",
         "DB_DATABASE":"sql12538613",
         "DB_USERNAME":"sql12538613",
         "DB_PASSWORD":"tXHUFSHzXS",
@@ -30,17 +30,17 @@
         "FILESYSTEM_DISK":"local",
         "QUEUE_CONNECTION":"sync",
         "SESSION_DRIVER":"database",
-        "SESSION_LIFETIME":120,
+        "SESSION_LIFETIME":"120",
 
         "MEMCACHED_HOST":"127.0.0.1 ",
 
         "REDIS_HOST":"127.0.0.1",
         "REDIS_PASSWORD":"null",
-        "REDIS_PORT":6379,
+        "REDIS_PORT":"6379",
 
         "MAIL_MAILER":"smtp",
         "MAIL_HOST":"smtp-relay.sendinblue.com",
-        "MAIL_PORT":587,
+        "MAIL_PORT":"587",
         "MAIL_USERNAME":"luzion1508@gmail.com",
         "MAIL_PASSWORD":"zrVTsNh5PZLY86C1",
         "MAIL_ENCRYPTION":"null",
@@ -59,7 +59,7 @@
         "PUSHER_APP_KEY":"",
         "PUSHER_APP_SECRET":"",
         "PUSHER_HOST":"",
-        "PUSHER_PORT":443,
+        "PUSHER_PORT":"443",
         "PUSHER_SCHEME":"https",
         "PUSHER_APP_CLUSTER":"mt1",
 
