--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,9 @@
         "src": "/(.*)",
         "dest": "/api/index.php"
     }],
+    "builds": [
+        { "src": "package.json", "use": "@vercel/static-build", "config": {"distDir": "public/build"} }
+    ],
     "env": {
         "APP_NAME":"Laravel",
         "APP_ENV":"local",
