--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/jetstream": "^2.12",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "phpoffice/phpspreadsheet": "^1.26",
         "tightenco/ziggy": "^1.5"
     },
     "require-dev": {
